# Earthquake-Analytics

./: .gitignore  README.md  databricks.yml  pyproject.toml
etl/: 01_bronze_ingestion.ipynb  02_silver_transformation.ipynb  03_gold_aggregation.ipynb  README.md
resources/: earthquake_analytics_etl_job.job.yml
scratch/: usgs_api.ipynb
streamlit_app/: README.md  app.py  app.yaml  requirements.txt
utils/: README.md  __init__.py  datasource.py  helpers.py  main.py
